# OpenCL_Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  toEdit.txt
data/dct4_f32/: in.txt  out.txt
data/fir_f32/: coeff.txt  in.txt  out.txt
data/matrix_multiplication_f32/: A.txt  B.txt
include/: common.h  utils.h
include/kernels/: buffer.h  kernel_executor.h  kernel_file.h  kernel_function.h  program.h
include/openCL/: kernelExecutor.h  kernelInfo.h  programInfo.h  vectorAdd.h
include/opencl_data/: buffer.h  data.h  scalar.h
include/platform/: device.h  platform.h  platformDevices.h  workingGroup.h  working_group.h
kernels/: dct4.cl  fir.cl  matrix_multiplication.cl  reduce.cl  vector_add.cl
src/: main.cpp  utils.cpp
src/kernels/: buffer.cpp  kernel_executor.cpp  kernel_file.cpp  kernel_function.cpp  program.cpp
src/openCL/: kernelExecutor.cpp  kernelInfo.cpp  programInfo.cpp  vectorAdd.cpp
src/opencl_data/: buffer.cpp  data.cpp  scalar.cpp
src/platform/: device.cpp  platform.cpp  platformDevices.cpp  workingGroup.cpp  working_group.cpp
